--- a/recipes.html
+++ b/recipes.html
@@ -20,7 +20,7 @@
                 <input type="text" id="ingName" name="ingName">
                 <label for="countBool">Ingredient measured by count.</label>
                 <input type="checkbox" id="countBool" name="countBool">
-                <button id="addIng" onclick="addIngredient()">Add Ingredient!</button> 
+                <button class="inline" id="addIng" onclick="addIngredient()">Add Ingredient!</button> 
             </div>
             <div class="full-width list-box">
                 <div id="autofill-container">
